data/forge_javadoc/1.7.10/processed/net_minecraft_client_shader_ShaderGroup.md
# ShaderGroup

## Class signature

```java
public class ShaderGroup extends java.lang.Object
```

## Constructors

- `public ShaderGroup( TextureManager p_i1050_1_, IResourceManager p_i1050_2_, Framebuffer p_i1050_3_, ResourceLocation p_i1050_4_) throws JsonException`

## Methods

- `public void func_152765_a( TextureManager p_152765_1_, ResourceLocation p_152765_2_) throws JsonException`
- `public void addFramebuffer(java.lang.String p_148020_1_, int p_148020_2_, int p_148020_3_)`
- `public void deleteShaderGroup()`
- `public Shader addShader(java.lang.String p_148023_1_, Framebuffer p_148023_2_, Framebuffer p_148023_3_) throws JsonException`
- `public void createBindFramebuffers(int p_148026_1_, int p_148026_2_)`
- `public void loadShaderGroup(float p_148018_1_)`
- `public final java.lang.String getShaderGroupName()`